--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.6.0",
+    "react-bootstrap": "^2.7.0",
+    "react-custom-pagination": "^1.6.8",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-paginate": "^8.1.4",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "rsuite": "^5.23.2",
     "slick-carousel": "^1.8.1",
     "swiper": "^8.4.5",
     "web-vitals": "^2.1.4"
